// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with array actions 1`] = `
<Fragment>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="cancel"
    key="cancel"
    type="button"
  >
    cancel
  </button>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="ok"
    key="ok"
    type="button"
  >
    ok
  </button>
</Fragment>
`;

exports[`renders correctly with hashmap actions 1`] = `
<Fragment>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="cancel"
    key="cancel"
    type="button"
  >
    Cancel
  </button>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="ok"
    key="ok"
    type="button"
  >
    OK
  </button>
</Fragment>
`;

exports[`renders correctly with hashmap actions and a default action 1`] = `
<Fragment>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="cancel"
    key="cancel"
    type="button"
  >
    Cancel
  </button>
  <button
    className="mdc-button mdc-dialog__button"
    data-mdc-dialog-action="ok"
    data-mdc-dialog-button-default={true}
    data-mdc-dialog-initial-focus={true}
    key="ok"
    type="button"
  >
    OK
  </button>
</Fragment>
`;
